fix contact gap

--- a/media.css
+++ b/media.css
@@ -177,7 +177,7 @@
   .card-body {
     display: flex;
     justify-content: flex-start;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
     /* width: 280px; */
   }
@@ -220,8 +220,11 @@
     height: auto;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 30px;
-    /* border: 1px solid red; */
+    border: 1px solid red;
+    gap: 100px;
   }
 
   .contact-info {
